# HuizenZoeker

./: .env.example  .gitignore  funda_dump.html  pyproject.toml  requirements.txt  run_collect.py  run_digest.py  test_kamernet.py  test_parse.py  test_parse2.py  test_parse3.py  test_scraper.py
.claude/: launch.json
.claude/worktrees/dazzling-mendel/: streamlit_app.py
.claude/worktrees/dazzling-mendel/.claude/: launch.json
.claude/worktrees/dazzling-mendel/.streamlit/: config.toml
.claude/worktrees/dazzling-mendel/src/: config.py  models.py
.claude/worktrees/dazzling-mendel/src/collectors/: amsterdam_wonen.py  funda.py  hestiva.py  inter_immo.py  kamernet.py  pararius.py  puur_makelaars.py  registry.py  verhuurmakelaar_bas.py
.claude/worktrees/dazzling-mendel/src/normalizer/: price.py
.claude/worktrees/dazzling-mendel/src/notifier/: email_sender.py
.claude/worktrees/dazzling-mendel/src/storage/: database.py  supabase_db.py
.claude/worktrees/dazzling-mendel/tests/: test_neighborhood.py  test_price.py
.github/workflows/: rental_monitor.yml
Desktop/Projects/HuisenZoeker/: pyproject.toml  requirements.txt
Desktop/Projects/HuisenZoeker/src/collectors/: base.py  kamernet.py
src/: config.py  pipeline.py
src/collectors/: amsterdam_rentals.py  base.py  funda.py  hausing.py  househunting.py  huurwoningen.py  pararius.py  rental_agency.py  vbt.py  vesteda.py  vva_amsterdam.py  wonen123.py
src/dashboard/: app.py
src/dedupe/: engine.py
src/matcher/: neighborhood.py
src/normalizer/: normalize.py
src/storage/: backend.py
tests/: test_dedupe.py
