[project]
name = "amsterdam-rental-monitor"
version = "1.0.0"
description = "Daily monitor for rental listings in Amsterdam"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "selectolax>=0.3",
    "lxml>=5.0",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "rapidfuzz>=3.5",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
